@@ -1,0 +1,29 @@
+{% set intro = g.site_intro_text %}
+
+<div class="module-content box">
+  <div>
+    {% if intro %}
+      {{ h.render_markdown(intro) }}
+    {% else %}
+      <h1 class="page-heading">{{ _("Welcome to DCOR") }}</h1>
+      <p>
+        DCOR, the deformability cytometry open repository, is the home for all your
+        RT-DC data. It is integrated with
+        <a href="https://dclab.readthedocs.io/">dclab</a> and
+        <a href="https://shapeout2.readthedocs.io/">Shape-Out</a> so you can
+        access and share your data from and with anyone, anywhere.
+      </p>
+    {% endif %}
+  </div>
+
+  {% block home_image %}
+    <section class="featured media-overlay hidden-xs">
+      <h2 class="media-heading">{% block home_image_caption %}{{ _("RT-DC collage (whole blood)") }}{% endblock %}</h2>
+      {% block home_image_content %}
+        <a class="media-image" href="#">
+          <img class="img-responsive" src="{{ h.url_for_static('/base/images/placeholder-420x220.png') }}" alt="Placeholder" width="420" height="220" />
+        </a>
+      {% endblock %}
+    </section>
+  {% endblock %}
+</div>
