@@ -1,4 +1,5 @@
 0.4.0
+ - enh: added promoted.html template
  - ref: moved branding to dcor_control
  - tests: use vagrant for tests
 0.3.9
